tests/NormalTests/paczka1/small_fuzzy/17748970.err
Error in line 2: FW1U39 A807 93,6
Error in line 5: OAutdUYrMpB A807 37,1
Error in line 9: OAutdUYrMpB A880 93,5
Error in line 3: ckk A880 7,4
